--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "^3.0.1"
+    "react-scripts": "^3.0.1",
+    "react-toastify": "^8.0.2",
+    "reactstrap": "^8.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
